<resources>
    <string name="app_name">Fragmentos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="superman_fragment_label">First Fragment</string>
    <string name="superman_name">Kal-el, Clark Kent</string>
    <string name="superman_poderes">Super fuerza, super velocidad, volar, invulnerabilidad</string>
    <string name="batman_fragment_label">Second Fragment</string>
    <string name="batman_name">Bruce Waine</string>
    <string name="batman_poderes">Artes marciales, estratega</string>
    <string name="Flash_fragmet_label">Flash</string>
    <string name="flash_name">Barry Allen</string>
    <string name="flash_poderes">super velocidad, super agilidad</string>
    <string name="wonder_woman_label">Wonder Woman</string>
    <string name="wonder_woman_name">Diana</string>
    <string name="wonder_woman_powers">super fuerza, invulnerabilidad, volar</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>